[project]
name = "nist-mcp"
version = "0.1.0"
description = "MCP server for NIST publications, SP 800-53 controls, CSF 2.0, NVD vulnerabilities, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pymupdf4llm>=1.27",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
]

[project.scripts]
nist-mcp = "nist_mcp.server:main"

[project.optional-dependencies]
scraper = ["beautifulsoup4>=4.12", "lxml>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nist_mcp", "scraper"]
