[project]
name = "nist-mcp"
version = "0.1.0"
description = "MCP server for NIST publications, SP 800-53 controls, CSF 2.0, NVD vulnerabilities, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "pymupdf4llm>=1.27.2.3",
    "openpyxl>=3.1.5",
]

[project.scripts]
nist-mcp = "nist_mcp.server:main"

[project.optional-dependencies]
scraper = ["beautifulsoup4>=4.14.3", "lxml>=6.1.0"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nist_mcp", "scraper"]
